// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectField render correctly 1`] = `
<SelectField
  name="name"
>
  <div
    className="control select undefined"
  >
    <select
      name="name"
    >
      <AnyOption>
        <option
          key="any"
          value=""
        >
          Any
        </option>
      </AnyOption>
      <option
        key="aaa"
        value="aaa"
      >
        aaa
      </option>
      <option
        key="bbb"
        value="bbb"
      >
        bbb
      </option>
      <option
        key="ccc"
        value="ccc"
      >
        ccc
      </option>
    </select>
  </div>
</SelectField>
`;

exports[`SelectField render correctly 2`] = `
<div
  className="control select undefined"
>
  <select
    name="name"
  >
    <AnyOption />
    <option
      key="aaa"
      value="aaa"
    >
      aaa
    </option>
    <option
      key="bbb"
      value="bbb"
    >
      bbb
    </option>
    <option
      key="ccc"
      value="ccc"
    >
      ccc
    </option>
  </select>
</div>
`;
